--- a/style1.css
+++ b/style1.css
@@ -15,6 +15,14 @@
   position: fixed;
   width: 100%;
 }
+/* .row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px !important; 
+    margin-left: -15px !important; 
+} */
 
 #navbar #logo {
   
